# occupancy

./: .gitignore  LICENSE.txt  README.md  draft.ipynb  draft2.ipynb  draft3.ipynb  gen_voxels.py  pyproject.toml  qint8.ipynb  vit.py
config/: diffusion_image2voxel.yml
models/: autoencoderkl-cls1.pt  autoencoderkl-cls18.pt  occ_transformer-cls18.pt  panoramic2voxel-cls1.pt
occupancy/datasets/: __init__.py  nuscenes.py  nuscenes_dataset.py
occupancy/models/: __init__.py  attention_unet3d_diffusion.py  bevdet3d.py  resnet_2d.py  resnet_3d.py  search.py  sparse_unet3d.py  transformer.py  unet_2d.py  unet_3d.py  unet_attention_2d.py  unet_attention_3d.py  unet_conditional_attention_3d.py  vq.py  (+1 more)
scripts/: download_occ.sh  gen_voxel.sh  train_diffusion_image2voxel.sh  train_diffusion_image2voxel_depth.sh  train_diffusion_image2voxel_diffusion.sh  train_diffusion_image2voxel_diffusion_hpc.sbatch  train_diffusion_image2voxel_diffusion_hpc.sh  train_diffusion_image2voxel_hpc.sbatch  train_diffusion_image2voxel_hpc.sh  train_diffusion_image2voxel_hpc18.sbatch  train_diffusion_image2voxel_hpc18.sh  train_diffusion_image2voxel_stage2.sh  train_diffusion_image2voxel_stage2_hpc.sbatch  train_diffusion_image2voxel_stage2_hpc.sh  train_diffusion_image2voxel_stage2_hpc1.sbatch  train_diffusion_image2voxel_stage2_hpc1.sh  train_diffusion_image2voxel_stage2_hpc_4gpus.sbatch  train_diffusion_image2voxel_stage2_hpc_4gpus.sh  train_diffusion_image2voxel_stage2_occ.sbatch  train_diffusion_image2voxel_stage2_occ.sh  train_diffusion_image2voxel_stage2_occ_hpc.sh
(+16 files in other folders)
